src/Classes/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Arriving_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Arriving To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>notEqual</operation>
                <valueField>Airport__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Onboarding_From__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Bookings (Arriving To)</relationshipLabel>
        <relationshipName>Bookings1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baggage_Count__c</fullName>
        <label>Baggage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beverage__c</fullName>
        <externalId>true</externalId>
        <label>Beverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Juice(Basis of Availability)</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>